Python Data Visualization code added

--- a/Udemy_Python_and_ML/33_Request_JSON_file.ipynb
+++ b/Udemy_Python_and_ML/33_Request_JSON_file.ipynb
@@ -7,48 +7,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Who is a minor god that is protector and creator of various arts, such as cheese making and bee keeping.\n",
+      "\"The A Team\" first aired in the USA and in the UK in what year?\n",
       "\n",
-      "1-Who is a minor god that is protector and creator of various arts, such as cheese making and bee keeping.\n",
-      "2-Who is a minor god that is protector and creator of various arts, such as cheese making and bee keeping.\n",
-      "3-Who is a minor god that is protector and creator of various arts, such as cheese making and bee keeping.\n",
-      "4-Who is a minor god that is protector and creator of various arts, such as cheese making and bee keeping.\n",
-      "What nationality was the surrealist painter Salvador Dali?\n",
+      "1-1987\n",
+      "2-1985\n",
+      "3-1981\n",
+      "4-1983\n",
+      "Sorry: 1985is in correct! The correct answer is 1983\n",
+      "Which nation claims ownership of Antarctica?\n",
       "\n",
-      "1-What nationality was the surrealist painter Salvador Dali?\n",
-      "2-What nationality was the surrealist painter Salvador Dali?\n",
-      "3-What nationality was the surrealist painter Salvador Dali?\n",
-      "4-What nationality was the surrealist painter Salvador Dali?\n",
-      "How tall is the Burj Khalifa?\n",
+      "1-United Nations\n",
+      "2-No one, but there are claims.\n",
+      "3-Australia\n",
+      "4-United States of America\n",
+      "Congregulation! Your answer ist correct! The correct answer was :No one, but there are claims.\n",
+      "This movie contains the quote, \"I love the smell of napalm in the morning!\"\n",
       "\n",
-      "1-How tall is the Burj Khalifa?\n",
-      "2-How tall is the Burj Khalifa?\n",
-      "3-How tall is the Burj Khalifa?\n",
-      "4-How tall is the Burj Khalifa?\n",
-      "Lady Gaga's real name is Stefani Joanne Angelina Germanotta.\n",
+      "1-Platoon\n",
+      "2-The Deer Hunter\n",
+      "3-Full Metal Jacket\n",
+      "4-Apocalypse Now\n",
+      "Sorry: Platoonis in correct! The correct answer is Apocalypse Now\n",
+      "In which movie does Robin Williams' character have to disguise themselves into a woman?\n",
       "\n",
-      "1-Lady Gaga's real name is Stefani Joanne Angelina Germanotta.\n",
-      "2-Lady Gaga's real name is Stefani Joanne Angelina Germanotta.\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24172/2952829428.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     26\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0manswer_number\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'-'\u001b[0m\u001b[1;33m+\u001b[0m \u001b[0mhtml\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munescape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquestion\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m             \u001b[0manswer_number\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m         \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1004\u001b[0m                 \u001b[1;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1005\u001b[0m             )\n\u001b[1;32m-> 1006\u001b[1;33m         return self._input_request(\n\u001b[0m\u001b[0;32m   1007\u001b[0m             \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1008\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"shell\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1049\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1050\u001b[0m                 \u001b[1;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1051\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Interrupted by user\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1052\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1053\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Invalid Message:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+      "1-Old Dogs\n",
+      "2-Awakenings\n",
+      "3-Jumanji\n",
+      "4-Mrs. Doubtfire\n",
+      "Congregulation! Your answer ist correct! The correct answer was :Mrs. Doubtfire\n",
+      "Thanks for playing\n"
      ]
     }
    ],
@@ -65,7 +59,7 @@
     "    r = requests.get(url)\n",
     "    if(r.status_code != 200):\n",
     "        endGame =input(\"Sorry, tehere was a problem retrieving the question. \\n\\\n",
-    "            press enterto try again or type 'quit to quit\")\n",
+    "            Press enterto try again or type 'quit' to quit\").lower()\n",
     "    else:\n",
     "        answer_number=1\n",
     "        data = json.loads(r.text)\n",
@@ -78,9 +72,18 @@
     "        print(html.unescape(question) + \"\\n\"  )\n",
     "\n",
     "        for answer in answers:\n",
-    "            print(str(answer_number)+'-'+ html.unescape(question))\n",
+    "            print(str(answer_number)+'-'+ html.unescape(answer))\n",
     "            answer_number+=1\n",
-    "        input('')\n"
+    "        user_answer = input(\"\\nTypethe number of the correct answer\")\n",
+    "        user_answer = answers[int(user_answer)-1]\n",
+    "        if user_answer== correct_answer:\n",
+    "            print(\"Congregulation! Your answer ist correct! The correct answer was :\"+ html.unescape(correct_answer))\n",
+    "        else : \n",
+    "            print(\"Sorry: \"+ html.unescape(user_answer)+ \"is in correct! The correct answer is \"+html.unescape(correct_answer))\n",
+    "        \n",
+    "        endGame = input(\"\\n Press enterto try again or type 'quit' to quit the game\").lower()\n",
+    "print('Thanks for playing')\n",
+    "\n"
    ]
   }
  ],
